--- a/style.css
+++ b/style.css
@@ -5,6 +5,22 @@ body[data-page="home"] {
     margin: 0;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    /* Inertie pour iOS */
+    font-family: sans-serif;
+}
+
 .bluetop {
     position: relative;
     display: flex;
