--- a/style.css
+++ b/style.css
@@ -49,12 +49,29 @@ body {
     max-width: 45vh;
     height: auto;
     min-height: 5vh;
-    max-height: 15vh;
+    max-height: 12vh;
     height: 100%;
     color: white;
     font-family: "K2D", sans-serif;
 }
 
+@media (max-width: 600px) {
+
+    .username {
+        position: relative;
+        display: flex;
+        background-color: #D9D9D9;
+        min-width: 45vw;
+        max-width: 45vh;
+        height: auto;
+        min-height: 5vh;
+        max-height: 12vh;
+        height: 100%;
+        color: white;
+        font-family: "K2D", sans-serif;
+    }
+
+} 
 .username h2 {
     padding-left: 1rem;
     padding-top: 0.6rem;
